# SauceLabsWithPythonSelenium4

./: .gitignore  .pylintrc  Dockerfile  Pipfile  config.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
drivers/: base_driver.py  localrunner.py  remote_driver.py
pages/: base_page.py  dynamic_loading_pages.py  login_page.py
tests/: config.py  conftest.py  test_dynamic_loading.py  test_login.py
